# discord_help_bot

./: Cargo.toml  README.md
discord-help-bot/: Cargo.toml
src/: main.rs
