[package]
name = "discord_help_bot"
version = "0.1.0"
authors = ["Chidubem Rubeluchukwuisi <kingsleycaesar581@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
serenity = { default-features = false, features = ["client", "gateway",
"model", "rustls_backend"], version = "0.9.0-rc.1"}
